# fin_predict

./: CMakeLists.txt  CruceMediasMoviles.cpp  CruceMediasMoviles.h  Estrategia.h  Precio.h  carga_datos.cpp  carga_datos.h  fin_predict.cpp  fin_predict.h
